# telethon-script

./: Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt
src/: __init__.py  utils.py
src/templates/: base.html  index.html  login.html
